Add shooting to instructions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    q to turn left,w to turn right,e to accelerate,r to hyperspace 
+		    q to turn left,w to turn right,e to accelerate,r to hyperspace, 1 to shoot 
 	    </footer>
 	</body>
 </html>
